Fix overlapping elements

--- a/src/styles/plus-disc.scss
+++ b/src/styles/plus-disc.scss
@@ -42,6 +42,8 @@
 
 	.scenes-list {
 		display: grid;
+		padding-bottom: 40px;
+		gap: .1px;
 
 		.scene {
 			display: grid;
